添加: math_conveter.html

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -6,5 +6,12 @@
 <body>
 <p><a href="/study/">study</a></p>
 <p><a href="/temp/">temp</a></p>
+
+<p>写 wiki 的辅助工具
+<ul>
+<li><a href="math_conveter.html">数学公式转换</a></li>
+</ul>
+</p>
+
 </body>
 </html>
