1. add: guo-ji-yin-biao.html 2. move math_conveter.html to dir 'tools'

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -4,12 +4,17 @@
   <title>Fan Hongtao's wiki</title>
 </head>
 <body>
-<p><a href="/study/">study</a></p>
-<p><a href="/temp/">temp</a></p>
-
-<p>写 wiki 的辅助工具
+<p>Wiki:
 <ul>
-<li><a href="math_conveter.html">数学公式转换</a></li>
+<li><a href="/study/">study</a></li>
+<li><a href="/temp/">temp</a></li>
+</ul>
+</p>
+
+<p>辅助工具
+<ul>
+<li><a href="tools/math_conveter.html">数学公式转换</a></li>
+<li><a href="tools/guo-ji-yin-biao.html">国际音标上色</a></li>
 </ul>
 </p>
 
