add: han-yu-pin-yin.html

--- a/nginx/index.html
+++ b/nginx/index.html
@@ -15,6 +15,7 @@
 <ul>
 <li><a href="tools/math_conveter.html">数学公式转换</a></li>
 <li><a href="tools/guo-ji-yin-biao.html">国际音标上色</a></li>
+<li><a href="tools/han-yu-pin-yin.html">汉语拼音 - 韵母声调</a></li>
 </ul>
 </p>
 
