--- a/nginx/index.html
+++ b/nginx/index.html
@@ -16,6 +16,7 @@
 <li><a href="tools/math_conveter.html">数学公式转换</a></li>
 <li><a href="tools/guo-ji-yin-biao.html">国际音标上色</a></li>
 <li><a href="tools/han-yu-pin-yin.html">汉语拼音 - 韵母声调</a></li>
+<li><a href="tools/han-zi-bu-shou.html">汉语部首</a></li>
 </ul>
 </p>
 
