--- a/nginx/tools/han-zi-bu-shou.html
+++ b/nginx/tools/han-zi-bu-shou.html
@@ -17,8 +17,11 @@ window.onload = function(){
 </script>
 
 <style >
-  #shengdiao button { min-width: 45px; }
-  td {min-width: 60px; font-family:"Courier New", Times, serif; text-align:center; }
+  body {font-family:'Microsoft YaHei,STSong';}
+  button {font-family:'Microsoft YaHei,STSong'; font-size:20px;}
+  .dict button { background-color:#d4d4d4; }
+  .dict .missing { background-color:#ff8080; }
+  .extend button { background-color:#c4c4ff;}
 </style>
 
 </head>
@@ -29,372 +32,493 @@ window.onload = function(){
 
 <p>通过点击表格中的按钮，将相应的音拷贝到剪贴板上。</p>
 
-<p><font color="red">注意：并不完全是字典中的部首。</font></p>
+<p><font color="red">注意：并不完全是字典中的部首：</font>
+<ul>
+<li>每种笔画的第一段（dict段，<font style="background:#d4d4d4">灰色背景</font>的按钮），是按照《新华字典》的“部首目录”中的顺序排列的。此段中有些<font style="background:#ff8080">红色背景</font>的空白按钮，是因为找不到对应的部首（可能是字符集中没有，也可能是没找到如何输入）。</li>
+<li>每种笔画的第二段（extend段，<font style="background:#c4c4ff">紫色背景</font>的按钮），（我个人认为）属于额外的部首，是按照Word中“插入”->“符号” 界面中的顺序排列的。</li>
+</ul>
+</p>
 
 <details open>
   <summary>1画</summary>
-  <button>一</button>
-  <button>丨</button>
-  <button>丶</button>
-  <button>丿</button>
-  <button>乀</button>
-  <button>乁</button>
-  <button>乚</button>
-  <button>乛</button>
-  <button>亅</button>
-  <!-- <button></button> -->
+  <p class="dict">
+    <button>一</button>
+    <button>丨</button>
+    <button>丿</button>
+    <button>丶</button>
+    <button>乛</button>
+	（<button></button>）
+	（<button class="missing">&nbsp</button>）
+    （<button>乚</button>）
+    （<button>乙</button>）
+  </p>
+  <p class="extend">
+    <button>乀</button>
+    <button>乁</button>
+    <button>亅</button>
+  </p>
 </details>
 
 <details open>
   <summary>2画</summary>
-  <button>⺁</button>
-  <button>⺈</button>
-  <button>⺋</button>
-  <button>丅</button>
-  <button>丄</button>
-  <button>丆</button>
-  <button>丩</button>
-  <button>丷</button>
-  <button>乂</button>
-  <button>乃</button>
-  <button>乄</button>
-  <button>乜</button>
-  <button>亠</button>
-  <button>亻</button>
-  <button>冂</button>
-  <button>冖</button>
-  <button>冫</button>
-  <button>几</button>
-  <button>凵</button>
-  <button>刀</button>
-  <button>刁</button>
-  <button>刂</button>
-  <button>勹</button>
-  <button>匚</button>
-  <button>匕</button>
-  <button>卜</button>
-  <button>卩</button>
-  <button>厂</button>
-  <button>厶</button>
-  <button>巜</button>
-  <button>廴</button>
-  <button>讠</button>
-  <button>阝</button>
-  <!-- <button></button> -->
-  <!-- <button></button> -->
-  <!-- <button></button> -->
+  <p class="dict">
+    <button>十</button>
+	<button>厂</button>
+	<button>匚</button>
+	（<button class="missing">&nbsp</button>）
+	（<button>刂</button>）
+	<button>卜</button>
+	<button>冂</button>
+	（<button>亻</button>）
+	（<button>⺁</button>）
+	<button>八</button>
+	<button>人</button>
+	（<button>入</button>）
+	（<button>⺈</button>）
+	（<button class="missing">&nbsp</button>）
+	<button>勹</button>
+	（<button class="missing">&nbsp</button>）
+	<button>儿</button>
+	<button>匕</button>
+	<button>几</button>
+	<button>亠</button>
+	<button>冫</button>
+	（<button>丷</button>）
+	<button>冖</button>
+	（<button>讠</button>）
+	<button>凵</button>
+	<button>卩</button>
+	<button>阝</button>（在左）
+	<button>阝</button>（在右）
+	<button>刀</button>
+	<button>力</button>
+	<button>又</button>
+	<button>厶</button>
+	<button>廴</button>
+	（<button>⺋</button>）
+  </p>
+  <p class="extend">
+	<button>丅</button>
+	<button>丄</button>
+	<button>丆</button>
+	<button>丩</button>
+	<button>乂</button>
+	<button>乃</button>
+	<button>乄</button>
+	<button>乜</button>
+	<button>刁</button>
+	<button>巜</button>
+	<!-- <button></button> -->
+	<!-- <button></button> -->
+	<!-- <button></button> -->
+  </p>
 </details>
 
 <details open>
   <summary>3画</summary>
-  <button>⺌</button>
-  <button>䒑</button>
-  <button>丌</button>
-  <button>丫</button>
-  <button>丬</button>
-  <button>久</button>
-  <button>乇</button>
-  <button>乊</button>
-  <button>亇</button>
-  <button>凢</button>
-  <button>厃</button>
-  <button>卪</button>
-  <button>口</button>
-  <button>囗</button>
-  <button>土</button>
-  <button>士</button>
-  <button>夕</button>
-  <button>夊</button>
-  <button>大</button>
-  <button>女</button>
-  <button>孑</button>
-  <button>子</button>
-  <button>宀</button>
-  <button>小</button>
-  <button>寸</button>
-  <button>尢</button>
-  <button>尸</button>
-  <button>屮</button>
-  <button>巛</button>
-  <button>川</button>
-  <button>工</button>
-  <button>己</button>
-  <button>已</button>
-  <button>巳</button>
-  <button>巾</button>
-  <button>干</button>
-  <button>幺</button>
-  <button>广</button>
-  <button>廾</button>
-  <button>弋</button>
-  <button>弓</button>
-  <button>彐</button>
-  <button>彑</button>
-  <button>彡</button>
-  <button>彳</button>
-  <button>忄</button>
-  <button>扌</button>
-  <button>氵</button>
-  <button>犭</button>
-  <button>纟</button>
-  <button>艹</button>
-  <button>辶</button>
-  <button>门</button>
-  <button>饣</button>
-  <button>马</button>
+  <p class="dict">
+    <button>干</button>
+	<button>工</button>
+	<button>土</button>
+    （<button>士</button>）
+	（<button>扌</button>）
+	<button>艹</button>
+	<button>寸</button>
+	<button>廾</button>
+	<button>大</button>
+	<button>兀</button>
+	<button>尢</button>
+	<button>弋</button>
+	<button>小</button>
+	（<button>⺌</button>）
+	<button>口</button>
+	<button>囗</button>
+	<button>山</button>
+	<button>巾</button>
+	<button>彳</button>
+	<button>彡</button>
+	（<button>犭</button>）
+	<button>夕</button>
+	<button>夂</button>
+	（<button>饣</button>）
+	<button>丬</button>
+	<button>广</button>
+	<button>门</button>
+	（<button>氵</button>）
+	（<button>忄</button>）
+	<button>宀</button>
+	<button>辶</button>
+	（<button>彐</button>）
+	<button class="missing">&nbsp</button>
+	<button>尸</button>
+	<button>己</button>
+	（<button>已</button>）
+	（<button>巳</button>）
+	<button>弓</button>
+	<button>子</button>
+	<button>屮</button>
+	（<button class="missing">&nbsp</button>）
+	<button>女</button>
+	<button>飞</button>
+	<button>马</button>
+	（<button>彑</button>）
+	（<button>纟</button>）
+	<button>幺</button>
+	<button>巛</button>
+  </p>
+  <p class="extend">
+	<button>䒑</button>
+	<button>丌</button>
+	<button>丫</button>
+	<button>久</button>
+	<button>乇</button>
+	<button>乊</button>
+	<button>亇</button>
+	<button>凢</button>
+	<button>厃</button>
+	<button>卪</button>
+	<button>夊</button>
+	<button>孑</button>
+	<button>川</button>
+  </p>
 </details>
 
 <details open>
   <summary>4画</summary>
-  <button>⺗</button>
-  <button>⺧</button>
-  <button>⺳</button>
-  <button>㓁</button>
-  <button>予</button>
-  <button>卐</button>
-  <button>卝</button>
-  <button>廿</button>
-  <button>戈</button>
-  <button>戈</button>
-  <button>户</button>
-  <button>支</button>
-  <button>攴</button>
-  <button>攵</button>
-  <button>文</button>
-  <button>斗</button>
-  <button>斤</button>
-  <button>方</button>
-  <button>无</button>
-  <button>日</button>
-  <button>曰</button>
-  <button>月</button>
-  <button>木</button>
-  <button>朩</button>
-  <button>欠</button>
-  <button>止</button>
-  <button>歹</button>
-  <button>殳</button>
-  <button>毋</button>
-  <button>毌</button>
-  <button>比</button>
-  <button>火</button>
-  <button>灬</button>
-  <button>爪</button>
-  <button>爫</button>
-  <button>父</button>
-  <button>爻</button>
-  <button>爿</button>
-  <button>片</button>
-  <button>牛</button>
-  <button>牜</button>
-  <button>犬</button>
-  <button>王</button>
-  <button>礻</button>
-  <button>罓</button>
-  <button>耂</button>
-  <button>肀</button>
-  <button>见</button>
-  <button>贝</button>
-  <button>车</button>
-  <button>韦</button>
-  <button>风</button>
-  <!-- <button></button> -->
-  <!-- <button></button> -->
-  <!-- <button></button> -->
+  <p class="dict">
+    <button>王</button>
+	<button>无</button>
+	<button>韦</button>
+	（<button>耂</button>）
+	<button>木</button>
+	（<button>朩</button>）
+	<button>支</button>
+	<button>犬</button>
+	<button>歹</button>
+	<button>车</button>
+	<button>牙</button>
+	<button>戈</button>
+	（<button>旡</button>）
+	<button>比</button>
+	<button>瓦</button>
+	<button>止</button>
+	<button>攴</button>
+	（<button>⺗</button>）
+	（<button class="missing">&nbsp</button>）
+	<button>日</button>（<button>曰</button>）
+	（<button class="missing">&nbsp</button>）
+	<button>贝</button>
+	<button>水</button>
+	<button>见</button>
+	（<button>⺧</button>）
+	<button>牛</button>（<button>牜</button>）
+	<button>手</button>
+	<button></button>
+	<button>气</button>
+	<button>毛</button>
+	（<button>攵</button>）
+	<button>长</button>
+	<button>片</button>
+	<button>斤</button>
+	<button>爪</button>
+	<button>父</button>
+	（<button>尣</button>）
+	（<button>爫</button>）
+	<button>月</button>
+	<button>氏</button>
+	<button>欠</button>
+	<button>风</button>
+	<button>殳</button>
+	<button>文</button>
+	<button>方</button>
+	<button>火</button>
+	<button>斗</button>
+	（<button>灬</button>）
+	<button>户</button>
+	（<button>礻</button>）
+	<button>心</button>
+	（<button>肀</button>）
+	（<button>爿</button>）
+	<button>毋</button>
+  </p>
+  <p class="extend">
+	<button>⺳</button>
+	<button>㓁</button>
+	<button>予</button>
+	<button>卐</button>
+	<button>卝</button>
+	<button>廿</button>
+	<button>毌</button>
+	<button>爻</button>
+	<button>罓</button>
+	<!-- <button></button> -->
+	<!-- <button></button> -->
+  </p>
 </details>
 
 <details open>
   <summary>5画</summary>
-  <button>⺻</button>
-  <button>⺪</button>
-  <button>戉</button>
-  <button>戊</button>
-  <button>曱</button>
-  <button>瓜</button>
-  <button>甘</button>
-  <button>生</button>
-  <button>用</button>
-  <button>田</button>
-  <button>由</button>
-  <button>甴</button>
-  <button>疋</button>
-  <button>疒</button>
-  <button>癶</button>
-  <button>白</button>
-  <button>皿</button>
-  <button>目</button>
-  <button>矛</button>
-  <button>矢</button>
-  <button>石</button>
-  <button>示</button>
-  <button>禾</button>
-  <button>穴</button>
-  <button>立</button>
-  <button>罒</button>
-  <button>衤</button>
-  <button>钅</button>
-  <button>长</button>
-  <button>鸟</button>
-  <button>龙</button>
-  <!-- <button></button> -->
-  <!-- <button></button> -->
+  <p class="dict">
+	（<button>玉</button>）
+	<button>示</button>
+	<button>甘</button>
+	<button>石</button>
+	<button>龙</button>
+	（<button>歺</button>）
+	<button>业</button>
+	（<button>氺</button>）
+	<button>目</button>
+	<button>田</button>
+	<button>罒</button>
+	<button>皿</button>
+	（<button>钅</button>）
+	<button>生</button>
+	<button>矢</button>
+	<button>禾</button>
+	<button>白</button>
+	<button>瓜</button>
+	<button>鸟</button>
+	<button>疒</button>
+	<button>立</button>
+    <button>穴</button>
+	（<button>衤</button>）
+	（<button>⺻</button>）
+	（<button class="missing">&nbsp</button>）
+	（<button>⺪</button>）
+	<button>疋</button>
+	<button>皮</button>
+	<button>癶</button>
+	<button>矛</button>
+	（<button>母</button>）
+  </p>
+  <p class="extend">
+	<button>戉</button>
+	<button>戊</button>
+	<button>曱</button>
+	<button>用</button>
+	<button>由</button>
+	<button>甴</button>
+	<!-- <button></button> -->
+	<!-- <button></button> -->
+  </p>
 </details>
-
 
 <details open>
   <summary>6画</summary>
-  <button>⺮</button>
-  <button>⺶</button>
-  <button>⺷</button>
-  <button>竹</button>
-  <button>米</button>
-  <button>糸</button>
-  <button>糹</button>
-  <button>缶</button>
-  <button>网</button>
-  <button>羊</button>
-  <button>羽</button>
-  <button>老</button>
-  <button>而</button>
-  <button>耒</button>
-  <button>耳</button>
-  <button>聿</button>
-  <button>肉</button>
-  <button>臣</button>
-  <button>自</button>
-  <button>至</button>
-  <button>臼</button>
-  <button>舌</button>
-  <button>舛</button>
-  <button>舟</button>
-  <button>艮</button>
-  <button>虍</button>
-  <button>虫</button>
-  <button>血</button>
-  <button>行</button>
-  <button>衣</button>
-  <button>襾</button>
-  <button>西</button>
-  <button>覀</button>
-  <button>页</button>
-  <button>齐</button>
-  <!-- <button></button> -->
-  <!-- <button></button> -->
+  <p class="dict">
+    <button>耒</button>
+	<button>老</button>
+	<button>耳</button>
+	<button>臣</button>
+	<button>覀</button>（<button>西</button>）
+	<button>而</button>
+	<button>页</button>
+	<button>至</button>
+	<button>虍</button>
+	<button>虫</button>
+	<button>肉</button>
+	<button>缶</button>
+	<button>舌</button>
+	<button>竹</button>（<button>⺮</button>）
+	<button>臼</button>
+	<button>自</button>
+	<button>血</button>
+	<button>舟</button>
+	<button>色</button>
+	<button>齐</button>
+	<button>衣</button>
+	<button>羊</button>
+	（<button>⺶</button>）
+	（<button>⺷</button>）
+	<button>米</button>
+	<button>聿</button>
+	（<button class="missing">&nbsp</button>）
+	<button>艮</button>
+	（<button>艸</button>）
+	<button>羽</button>
+	<button>糸</button>
+	（<button>糹</button>）
+  </p>
+  <p class="extend">
+	<button>网</button>
+	<button>舛</button>
+	<button>行</button>
+	<button>襾</button>
+	<!-- <button></button> -->
+	<!-- <button></button> -->
+  </p>
 </details>
 
 <details open>
   <summary>7画</summary>
-  <button>⻊</button>
-  <button>見</button>
-  <button>角</button>
-  <button>言</button>
-  <button>訁</button>
-  <button>谷</button>
-  <button>豆</button>
-  <button>豕</button>
-  <button>豸</button>
-  <button>貝</button>
-  <button>身</button>
-  <button>車</button>
-  <button>走</button>
-  <button>酉</button>
-  <button>釆</button>
-  <button>镸</button>
-  <button>麦</button>
-  <button>龟</button>
+  <p class="dict">
+    <button>麦</button>
+	（<button>镸</button>）
+	<button>走</button>
+	<button>赤</button>
+	（<button>車</button>）
+	<button>豆</button>
+	<button>酉</button>
+	<button>辰</button>
+	<button>豕</button>
+	<button>卤</button>
+	（<button>貝</button>）
+	（<button>見</button>）
+	<button>里</button>
+	（<button>⻊</button>）
+	<button>足</button>
+	<button>邑</button>
+	（<button class="missing">&nbsp</button>）
+	<button>身</button>
+	<button>釆</button>
+	<button>谷</button>
+	<button>豸</button>
+	<button>龟</button>
+	<button>角</button>
+	<button>言</button>
+	<button>辛</button>
+  </p>
+  <p class="extend">
+    <button>訁</button>
+  </p>
 </details>
 
 <details open>
   <summary>8画</summary>
-  <button>金</button>
-  <button>釒</button>
-  <button>長</button>
-  <button>門</button>
-  <button>阜</button>
-  <button>隶</button>
-  <button>隹</button>
-  <button>雨</button>
-  <button>青</button>
-  <button>靣</button>
-  <button>飠</button>
-  <button>鱼</button>
-  <button>黾</button>
-  <button>齿</button>
-  <!-- <button></button> -->
+  <p class="dict">
+    <button>青</button>
+	（<button>長</button>）
+	<button></button>
+	<button>雨</button>（<button class="missing">&nbsp</button>）
+	<button>非</button>
+	<button>齿</button>
+	（<button>虎</button>）
+	（<button>門</button>）
+	<button>黾</button>
+	<button>隹</button>
+	<button>阜</button>
+	<button>金</button>
+	（<button>飠</button>）
+	<button>鱼</button>
+	<button>隶</button>
+  </p>
+  <p class="extend">
+    <button>釒</button>
+	<button>靣</button>
+  </p>
 </details>
 
 <details open>
   <summary>9画</summary>
-  <button>面</button>
-  <button>革</button>
-  <button>韋</button>
-  <button>韭</button>
-  <button>音</button>
-  <button>頁</button>
-  <button>風</button>
-  <button>食</button>
-  <button>首</button>
-  <button>香</button>
-  <button>骨</button>
-  <button>鬼</button>
+  <p class="dict">
+    <button>革</button>
+	（<button>頁</button>）
+	<button>面</button>
+	<button>韭</button>
+	<button>骨</button>
+	<button>香</button>
+	<button>鬼</button>
+	<button>食</button>
+	（<button>風</button>）
+	<button>音</button>
+	<button>首</button>
+	（<button>韋</button>）
+	（<button>飛</button>）
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
   <summary>10画</summary>
-  <button>馬</button>
-  <button>高</button>
-  <button>髟</button>
-  <button>鬥</button>
-  <button>鬯</button>
-  <button>鬲</button>
+  <p class="dict">
+    <button>髟</button>
+	（<button>馬</button>）
+	<button>鬲</button>
+	<button>鬥</button>
+	<button>高</button>
+  </p>
+  <p class="extend">
+    <button>鬯</button>
+  </p>
 </details>
 
 
 <details open>
   <summary>11画</summary>
-  <button>魚</button>
-  <button>鳥</button>
-  <button>鹵</button>
-  <button>鹿</button>
-  <button>麥</button>
-  <button>麻</button>
-  <button>黄</button>
+  <p class="dict">
+    <button>黄</button>
+	（<button>麥</button>）
+	（<button>鹵</button>）
+	（<button>鳥</button>）
+	（<button>魚</button>）
+	<button>麻</button>
+	<button>鹿</button>
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
   <summary>12画</summary>
-  <button>黍</button>
-  <button>黑</button>
-  <button>黹</button>
-  <button>黽</button>
-  <button>鼎</button>
+  <p class="dict">
+    <button>鼎</button>
+	<button>黑</button>
+	<button>黍</button>
+  </p>
+  <p class="extend">
+    <button>黹</button>
+    <button>黽</button>
+  </p>
 </details>
 
 <details open>
   <summary>13画</summary>
-  <button>鼓</button>
-  <button>鼠</button>
+  <p class="dict">
+    <button>鼓</button>
+	（<button>黽</button>）
+	<button>鼠</button>
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
   <summary>14画</summary>
-  <button>鼻</button>
-  <button>齊</button>
+  <p class="dict">
+    <button>鼻</button>
+    （<button>齊</button>）
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
   <summary>15画</summary>
-  <button>齒</button>
+  <p class="dict">
+    （<button>齒</button>）
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
   <summary>16画</summary>
-  <button>龍</button>
+  <p class="dict">
+    （<button>龍</button>）
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 <details open>
-  <summary>18画</summary>
-  <button>龜</button>
+  <summary>17画</summary>
+  <p class="dict">
+    （<button>龜</button>）
+    <button>龠</button>
+  </p>
+  <p class="extend">
+  </p>
 </details>
 
 </body>
