专用区的汉字可以正常显示（因为之前为 button 设置了字体）

--- a/nginx/tools/han-zi-bu-shou.html
+++ b/nginx/tools/han-zi-bu-shou.html
@@ -108,9 +108,9 @@ window.onload = function(){
 	<button>乜</button>
 	<button>刁</button>
 	<button>巜</button>
-	<!-- <button></button> -->
-	<!-- <button></button> -->
-	<!-- <button></button> -->
+	<button></button>
+	<button></button>
+	<button></button>
   </p>
 </details>
 
@@ -251,8 +251,8 @@ window.onload = function(){
 	<button>毌</button>
 	<button>爻</button>
 	<button>罓</button>
-	<!-- <button></button> -->
-	<!-- <button></button> -->
+	<button></button>
+	<button></button>
   </p>
 </details>
 
@@ -298,8 +298,8 @@ window.onload = function(){
 	<button>用</button>
 	<button>由</button>
 	<button>甴</button>
-	<!-- <button></button> -->
-	<!-- <button></button> -->
+	<button></button>
+	<button></button>
   </p>
 </details>
 
@@ -344,8 +344,8 @@ window.onload = function(){
 	<button>舛</button>
 	<button>行</button>
 	<button>襾</button>
-	<!-- <button></button> -->
-	<!-- <button></button> -->
+	<button></button>
+	<button></button>
   </p>
 </details>
 
@@ -388,7 +388,7 @@ window.onload = function(){
   <p class="dict">
     <button>青</button>
 	（<button>長</button>）
-	<button></button>
+	<button>龺</button>
 	<button>雨</button>（<button class="missing">&nbsp</button>）
 	<button>非</button>
 	<button>齿</button>
@@ -440,6 +440,7 @@ window.onload = function(){
   </p>
   <p class="extend">
     <button>鬯</button>
+    <button></button>
   </p>
 </details>
 
@@ -521,11 +522,20 @@ window.onload = function(){
   </p>
 </details>
 
+<details open>
+  <summary>19画</summary>
+  <p class="dict">
+  </p>
+  <p class="extend">
+	<button></button>
+  </p>
+</details>
+
 </body>
 </html>
 
 <!-- CJK 偏旁部首增补 
-⺄⺈⺋⺌⺗⺧⺪⺮⺳⺶⺷⺻⻊
+⺁⺄⺈⺋⺌⺗⺧⺪⺮⺳⺶⺷⺻⻊
 -->
 
 <!-- CJK 统一汉字扩充A
@@ -533,9 +543,22 @@ window.onload = function(){
 -->
 
 <!-- CJK 统一汉字
-一丄丅丆丌丨丩丫丬丶丷丿乀乁乂乃乄久乇乊乚乛乜亅亇予亠亻冂冖冫几凢凵刀刁刂勹匚匕卐卜卝卩厂厃卪厶口囗土士夕夊大女孑子宀小寸尢尸屮巛巜川工己已巳巾干幺广廴廾廿弋弓彐彑彡彳忄戈戉戊户扌支攴攵文斗斤方无日曰曱月木朩欠止歹殳毋毌比氵火灬爪爫父爻爿片牛牜犬犭王瓜甘生用田由甴疋疒癶白皿目矛矢石示礻禾穴立竹米糸糹纟缶网罒罓羊羽老耂而耒耳聿肀肉臣自至臼舌舛舟艮艸艹虍虫血行衣衤襾西覀見见角言訁讠谷豆豕豸貝贝身車车走辶酉釆金釒钅長镸长門门阜阝隶隹雨青面靣革韋韦韭音頁页風风食飠饣首香馬马骨高髟鬥鬯鬲鬼魚鱼鳥鸟鹵鹿麥麦麻黄黍黑黹黽黾鼎鼓鼠鼻齊齐齒齿龍龙龜龟
+一丄丅丆丌丨丩丫丬丶丷丿乀乁乂乃乄久乇乊乚乛乜亅亇予亠亻
+冂冖冫几凢凵刀刁刂勹匚匕卐卜卝卩厂厃卪厶口囗土士夕夊大女
+孑子宀小寸尢尸屮巛巜川工己已巳巾干幺广廴廾廿弋弓彐彑彡彳
+忄戈戉戊户扌支攴攵文斗斤方无日曰曱月木朩欠止歹殳毋毌比氵
+火灬爪爫父爻爿片牛牜犬犭王瓜甘生用田由甴疋疒癶白皿目矛矢
+石示礻禾穴立竹米糸糹纟缶网罒罓羊羽老耂而耒耳聿肀肉臣自至
+臼舌舛舟艮艸艹虍虫血行衣衤襾西覀見见角言訁讠谷豆豕豸貝贝
+身車车走辶酉釆金釒钅長镸长門门阜阝隶隹雨青面靣革韋韦韭音
+頁页風风食飠饣首香馬马骨高髟鬥鬯鬲鬼魚鱼鳥鸟鹵鹿麥麦麻黄
+黍黑黹黽黾鼎鼓鼠鼻齊齐齒齿龍龙龜龟龺
 -->
 
-<!-- 专用区 （因为在浏览器中无法显示，所以目前将相应的部首隐藏）
-
+<!-- 专用区
+
+-->
+
+<!-- 看不出区别在那里的部首
+统一汉字： 龺  vs  专用区： 
 -->
